chore: fixes
Signed-off-by: Michael Yingbull <michael@maplecreekmedical.ca>